traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:1: error: value unary_! is not a member of Unit
override def run() {var y=0; while (!a()){if (estFaceMur() && y==0){gauche();avance;gauche;y=y+1};if(estFaceMur()&& y==1){droite;avance;droite;y=y-1}}
                                    ^Snake:5: error: too many arguments for method getDirection: ()plm.universe.Direction
def a(){getDirection(est);if(estFaceMur()){gauche();if (estFaceMur()){return true}};else return false} 
                    ^Snake:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
def a(){getDirection(est);if(estFaceMur()){gauche();if (estFaceMur()){return true}};else return false} 
                                                                             ^Snake:5: warning: enclosing method a has result type Unit: return value discarded
def a(){getDirection(est);if(estFaceMur()){gauche();if (estFaceMur()){return true}};else return false} 
                                                                      ^Snake:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
def a(){getDirection(est);if(estFaceMur()){gauche();if (estFaceMur()){return true}};else return false} 
                                                                                                ^Snake:5: warning: enclosing method a has result type Unit: return value discarded
def a(){getDirection(est);if(estFaceMur()){gauche();if (estFaceMur()){return true}};else return false} 
                                                                                         ^